src/components/organisms/O_Footer/O_Footer.module.scss
@use '@/styles/config.scss' as *;

.wrapper {
  bottom: calc(calc(30px + calc(calc($space * 10) + 20vh)) * -1);
  position: absolute;
  display: flex;
  justify-content: space-between;
  gap: $double-average-gap;
  padding: $padding-mid;
  padding-bottom: $padding;
  background: $backgroung-grad-base;
  height: 20vh;
  border-radius: $radius $radius 0 0;
  max-width: $max-width;

  &::before {
    @include border();
    pointer-events: none;
    border-radius: $radius $radius 0 0;
  }
}

.buttons {
  display: flex;
  gap: $average-gap;
}

.info {
  display: flex;
  gap: $average-gap;
  align-items: flex-end;
}

.left {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: calc(calc($max-width/2) - $double-average-gap);
}

.right {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: calc(calc($max-width/2) - $double-average-gap);
}

.text2 {
  @include label();
  // opacity: 1;
}

.input {
  position: relative;
}
.inputwrap {
  display: inline;
  position: relative;
}

.btn {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: calc(3 * $space);
  width: calc($space * 3);
  height: calc($space * 3);
  background: black;
  border: 0;
  cursor: pointer;
}
.label {
  @include label();
  /* margin-left: calc(3 * $space); */
}

.form {
  position: relative;

  display: flex;
  gap: calc($space/1);
  flex-direction: column;
}

@media screen and (max-width: 849px) {
  .wrapper {
    flex-direction: column;
    width: 100%;
    height: auto;
    padding: $padding;
    padding-bottom: calc($padding * 2);
    bottom: clamp(-400px, -55vh, -800px);
    gap: calc($space * 10);
  }

  .left {
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-between;
    width: 100%;
    gap: calc($space * 10);
  }

  .right {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
  }

  .buttons {
    flex-direction: column;
  }

  .text2 {
    @include label();
  }

  .form {
    gap: calc($space * 3);
  }

  .btn {
    width: calc($space * 4);
    height: calc($space * 4);
    top: 50%;
    transform: translateY(-50%);
  }
}

@media screen and (min-width: 1700px) {
  .buttons {
    /* flex-direction: column;
    gap: $space; */
    width: 100%;
  }

  .wrapper {
    gap: $space;
  }

  .left {
    width: calc(calc($max-width/2) - $space);
  }

  .right {
    width: calc(calc($max-width/2) - $space);
  }
}

